# cpp-lib

./: CMakeLists.txt  main.cpp
src/bit/: bo.cpp
src/dp/: nums.cpp
src/ds/: dsu.cpp  fenwick.cpp  segt.cpp  st.cpp  trie.cpp
src/graph/: dijkstra.cpp  hld.cpp  mcf.cpp  mf.cpp
src/math/: bignum.cpp  binomial.cpp  gcd.cpp  matrix.cpp  mint.cpp  prime.cpp
src/str/: hash.cpp  z.cpp
src/util/: cpp-util.h  debug.h
